--- a/Public/views/login.html
+++ b/Public/views/login.html
@@ -12,6 +12,12 @@
 
 <body>
     <div class="formulario">
+        <div class="titulo">
+          Bienvenido a Q-Pay!
+        </div>
+        <div class="eslogan">
+          Expertos en Agilidad
+        </div>
         <form id="miFormulario" action="" method="post">
             <input id="correo" name="correo" type="email" placeholder="Introduzca su Correo">
             <input id="contrasena" name="contrasena" type="password" placeholder="Introduzca su Contraseña">
@@ -35,6 +41,6 @@
         return;
       }
     });
-  </script>
+    </script>
 </body>
 </html>
