--- a/Public/css/confirmareliminacion.css
+++ b/Public/css/confirmareliminacion.css
@@ -25,40 +25,44 @@ body {
   background-color: var(--color-secundario);
   border: solid 2px var(--color-cuarto);
   border-radius: 7px;
-  padding: 1rem;
+  padding: 1rem 1.5rem;
   display: flex;
   flex-direction: column;
-  align-items: center;
   justify-content: center;
-  width: 35%;
-  text-align: center;
+  align-items: center;
+  gap: 1rem;
+  width: 40%;
+  height: 260px;
 }
 
 .titulo {
   font-size: 28px;
   font-weight: bold;
+  text-align: center;
+  color: var(--color-cuarto);
 }
 
-.info {
-  font-size: 15px;
+.eslogan {
   font-weight: 500;
-  margin-top: 0.5rem;
-  margin-bottom: 0.8rem;
-  line-height: 1.4;
+  text-align: center;
+  font-size: 15px;
+  color: var(--color-cuarto);
 }
 
-#miFormulario {
+#formEliminar {
   border: dashed 2px var(--color-terciario);
   border-radius: 7px;
   padding: 0.8rem;
   display: flex;
   flex-direction: column;
   align-items: center;
-  gap: 0.8rem;
+  justify-content: center;
+  gap: 0.7rem;
   width: 95%;
 }
 
-#correo {
+#password,
+#repetir {
   background-color: var(--color-cuarto);
   border: none;
   border-radius: 7px;
@@ -68,7 +72,8 @@ body {
   font-size: 15px;
 }
 
-#correo::placeholder {
+#password::placeholder,
+#repetir::placeholder {
   color: var(--color-principal);
   font-size: 15px;
   padding-left: 5px;
@@ -79,12 +84,13 @@ button {
   cursor: pointer;
   background-color: var(--color-principal);
   font-size: 18px;
-  width: 60%;
+  width: 70%;
   height: 35px;
   border-radius: 7px;
   transition: background-color 0.2s;
+  font-weight: bold;
 }
 
 button:hover {
-  background-color: rgb(196, 195, 182);
+  background-color: rgb(200, 198, 185);
 }
