falta solo compra

--- a/Public/css/confirmareliminacion.css
+++ b/Public/css/confirmareliminacion.css
@@ -94,3 +94,13 @@ button {
 button:hover {
   background-color: rgb(200, 198, 185);
 }
+
+.error {
+  color: red;
+  font-family: var(--fuente);
+  font-size: 14px;
+  text-align: center;
+  margin-top: 0.5rem;
+  margin-bottom: 0.5rem;
+  width: 100%;
+}
