--- a/Public/css/digitos.css
+++ b/Public/css/digitos.css
@@ -92,3 +92,13 @@ button {
 button:hover {
   background-color: rgb(196, 195, 182);
 }
+
+.error {
+  color: red;
+  font-family: var(--fuente);
+  font-size: 14px;
+  text-align: center;
+  margin-top: 0.5rem;
+  margin-bottom: 0.5rem;
+  width: 100%;
+}
